# ChangeLog for net-im/leechcraft-azoth
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> leechcraft-azoth-9999.ebuild:
  Azoth Xoox migrated to QXmpp.

  10 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> leechcraft-azoth-9999.ebuild:
  Updated Azoth ebuild to depend on Gloox if Xoox is enabled.

  27 Dec 2010; G. Rudoy <0xd34df00d@gmail.com>
  +leechcraft-azoth-9999.ebuild:
  Azoth IM core.

*leechcraft-azoth-9999