@@ -1,6 +1,5 @@
 DIST leechcraft-0.4.65.tar.bz2 2715545 RMD160 f4099703a2c6552419f61755e6159f5f8abbfeb9 SHA1 9490dd410804631b4c00eb443ff48b0cdfbc7d46 SHA256 1b895b8a768a235b085125bafcc65be2ea9e5d39fedaa357e47b58dd505186b7
 EBUILD leechcraft-azoth-0.4.65.ebuild 710 RMD160 33fb5a4636580d9c7b465f520003fbef308caa89 SHA1 5ca18533353bdf21c408642309a40ef1e889235a SHA256 64ba022ff7dc9c116b647103c80e8995836a676d112c521280544860d7747fb9
-EBUILD leechcraft-azoth-9999.ebuild 698 RMD160 341622ca810d111299516cf9b43bca596252fdce SHA1 560f9a066cbd16822235c170a947f6a9fe6dcea1 SHA256 045075fb3754ec90131eff3839eb561421bc7aa62ab0a775aadb518af3281350
-MISC ChangeLog 495 RMD160 696d1ca2a793440de31404014aa1110082704142 SHA1 48cb9d49fb7cb6debd7a0d58e579f2230f70dad7 SHA256 eb873afff0c153cb5c1cb2176774ac1921a6517059f1a7ad6c077a812f67a56c
-MISC Manifest.orig 992 RMD160 ddf864edac83bfb4ab394664ebee4867fbc3e2e1 SHA1 429fd8f05b2aca9f3b3c8fc952c1b3be78d65a8d SHA256 2f03eff5d18b61cb7e307cb02956f09aa6c0381dee9ac5b9e53ce99ce30fe158
-MISC metadata.xml 611 RMD160 ce545d1cb4f419f737c26b62744da0e96b054af4 SHA1 2989c86a7109747525341954efc0ec83f7dbc911 SHA256 3f1efc82e6ef6ae3cbab6374c007161751e672c47f04a0b99183c7e30d84e54e
+EBUILD leechcraft-azoth-9999.ebuild 841 RMD160 6a784e3cb5920dee45bba9f7330480968518748e SHA1 2919d4f95c720e246a4f0d692c3357428f5704fc SHA256 134a52d1ba09f94001d0233bb93c4f25f8fd729adeca4ef6ad9cb1a19b5d191c
+MISC ChangeLog 657 RMD160 ce250aaf157877200d1265c06694137df0021f61 SHA1 4091ed76f6ac48e66e2fa57c1fe4b9084abfb2a5 SHA256 0568f234bb060ee1047dbc25d271d3984c6cf562a91da9d1be119fef6e0ece97
+MISC metadata.xml 769 RMD160 5e626edf666be650137871641a5a9f4fa31e8e8d SHA1 476f4b49d220ba896a4980768f707025e8dbd660 SHA256 98a8d9c10c377d048a17975b29b398d96152c7a3a7bcf507956eee3a438466bc
