@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Feb 2011; G. Rudoy <0xd34df00d@gmail.com> leechcraft-azoth-9999.ebuild,
+  metadata.xml:
+  Added flags for acetamide and standardstyles to leechcraft-azoth.
+
   25 Jan 2011; G. Rudoy <0xd34df00d@gmail.com> leechcraft-azoth-9999.ebuild:
   Azoth Xoox migrated to QXmpp.
 
